--- a/spec/vcr/yelp_facade/dog_friendly_businesses.yml
+++ b/spec/vcr/yelp_facade/dog_friendly_businesses.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      X-B3-Sampled:
-      - '0'
-      Ratelimit-Dailylimit:
-      - '5000'
       X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-8bh2x; site=public_api_v3
-      Ratelimit-Remaining:
-      - '4967'
-      Ratelimit-Resettime:
-      - '2021-11-10T00:00:00+00:00'
+      - routing-main--useast1-b9c656cb7-rvqcp; site=public_api_v3
       Server:
       - envoy
       X-Zipkin-Id:
-      - 7b4e04d061886fec
+      - 6c7994e299712e54
+      Ratelimit-Dailylimit:
+      - '5000'
+      X-B3-Sampled:
+      - '0'
+      Ratelimit-Remaining:
+      - '4998'
+      Ratelimit-Resettime:
+      - '2021-11-11T00:00:00+00:00'
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-91-109-useast1aprod
+      - 10-65-85-173-useast1aprod
       X-Extlb:
-      - 10-65-91-109-useast1aprod
+      - 10-65-85-173-useast1aprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Tue, 09 Nov 2021 23:40:33 GMT
+      - Wed, 10 Nov 2021 00:18:41 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-dal21239-DAL
+      - cache-dal21255-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -64,8 +64,18 @@ http_interactions:
       - chunked
     body:
       encoding: ASCII-8BIT
-      string: '{"businesses": [{"id": "FfwLdr5-TBINeZbR4ey_WQ", "alias": "irish-snug-denver",
-        "name": "Irish Snug", "image_url": "https://s3-media4.fl.yelpcdn.com/bphoto/4Tfw-AgjlGw6ZM9LDSLU0g/o.jpg",
+      string: '{"businesses": [{"id": "No2VmMM6QchZSYtCk6k0vQ", "alias": "dp-dough-denver",
+        "name": "DP Dough", "image_url": "https://s3-media1.fl.yelpcdn.com/bphoto/MBkGfvYy-rTgO8tVuYzdQQ/o.jpg",
+        "is_closed": false, "url": "https://www.yelp.com/biz/dp-dough-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
+        "review_count": 318, "categories": [{"alias": "pizza", "title": "Pizza"},
+        {"alias": "italian", "title": "Italian"}], "rating": 3.5, "coordinates": {"latitude":
+        39.73971, "longitude": -104.97111}, "transactions": ["delivery", "pickup"],
+        "price": "$", "location": {"address1": "1228 E Colfax Ave", "address2": "",
+        "address3": "", "city": "Denver", "zip_code": "80218", "country": "US", "state":
+        "CO", "display_address": ["1228 E Colfax Ave", "Denver, CO 80218"]}, "phone":
+        "+13038399663", "display_phone": "(303) 839-9663", "distance": 473.8230907508149},
+        {"id": "FfwLdr5-TBINeZbR4ey_WQ", "alias": "irish-snug-denver", "name": "Irish
+        Snug", "image_url": "https://s3-media4.fl.yelpcdn.com/bphoto/4Tfw-AgjlGw6ZM9LDSLU0g/o.jpg",
         "is_closed": false, "url": "https://www.yelp.com/biz/irish-snug-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
         "review_count": 493, "categories": [{"alias": "venues", "title": "Venues &
         Event Spaces"}, {"alias": "irish_pubs", "title": "Irish Pub"}, {"alias": "burgers",
@@ -161,8 +171,18 @@ http_interactions:
         Ave", "address2": null, "address3": "", "city": "Denver", "zip_code": "80218",
         "country": "US", "state": "CO", "display_address": ["1035 E 17th Ave", "Denver,
         CO 80218"]}, "phone": "+17204855503", "display_phone": "(720) 485-5503", "distance":
-        931.6953910725164}, {"id": "7UWt_282vPsGQPtrquRR9Q", "alias": "shells-and-sauce-denver",
-        "name": "Shells & Sauce", "image_url": "https://s3-media1.fl.yelpcdn.com/bphoto/yRY-S3uHuPXNAQj9VvMroQ/o.jpg",
+        931.6953910725164}, {"id": "5lCzYPnAoNNlAZxW3rr_RA", "alias": "satchels-on-6th-denver",
+        "name": "Satchel''s on 6th", "image_url": "https://s3-media2.fl.yelpcdn.com/bphoto/u3xLS0XwgGLpupXFLx47Xw/o.jpg",
+        "is_closed": false, "url": "https://www.yelp.com/biz/satchels-on-6th-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
+        "review_count": 170, "categories": [{"alias": "newamerican", "title": "American
+        (New)"}, {"alias": "cocktailbars", "title": "Cocktail Bars"}], "rating": 4.0,
+        "coordinates": {"latitude": 39.72545, "longitude": -104.96674}, "transactions":
+        ["delivery"], "price": "$$", "location": {"address1": "1710 E 6th Ave", "address2":
+        "", "address3": "", "city": "Denver", "zip_code": "80218", "country": "US",
+        "state": "CO", "display_address": ["1710 E 6th Ave", "Denver, CO 80218"]},
+        "phone": "+13033992560", "display_phone": "(303) 399-2560", "distance": 1163.8531366695668},
+        {"id": "7UWt_282vPsGQPtrquRR9Q", "alias": "shells-and-sauce-denver", "name":
+        "Shells & Sauce", "image_url": "https://s3-media1.fl.yelpcdn.com/bphoto/yRY-S3uHuPXNAQj9VvMroQ/o.jpg",
         "is_closed": false, "url": "https://www.yelp.com/biz/shells-and-sauce-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
         "review_count": 898, "categories": [{"alias": "italian", "title": "Italian"},
         {"alias": "bars", "title": "Bars"}, {"alias": "salad", "title": "Salad"}],
@@ -257,28 +277,7 @@ http_interactions:
         "865 N Lincoln St", "address2": null, "address3": "", "city": "Denver", "zip_code":
         "80203", "country": "US", "state": "CO", "display_address": ["865 N Lincoln
         St", "Denver, CO 80203"]}, "phone": "+13038303934", "display_phone": "(303)
-        830-3934", "distance": 1495.906962978679}, {"id": "7IOQ3CX1OXc6TjC59WbUNw",
-        "alias": "burgerfi-denver", "name": "BurgerFi", "image_url": "https://s3-media1.fl.yelpcdn.com/bphoto/3mR9kLD5K_ebJAho2ere6w/o.jpg",
-        "is_closed": false, "url": "https://www.yelp.com/biz/burgerfi-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
-        "review_count": 320, "categories": [{"alias": "hotdog", "title": "Hot Dogs"},
-        {"alias": "burgers", "title": "Burgers"}, {"alias": "tradamerican", "title":
-        "American (Traditional)"}], "rating": 3.5, "coordinates": {"latitude": 39.734932,
-        "longitude": -104.98783}, "transactions": ["delivery", "pickup"], "price":
-        "$$", "location": {"address1": "1147 Broadway", "address2": "Unit 101", "address3":
-        "", "city": "Denver", "zip_code": "80203", "country": "US", "state": "CO",
-        "display_address": ["1147 Broadway", "Unit 101", "Denver, CO 80203"]}, "phone":
-        "+17203905046", "display_phone": "(720) 390-5046", "distance": 1505.0956922021933},
-        {"id": "qtRNJsz1MYEZVidYIft1Tw", "alias": "illegal-burger-capitol-hill-denver",
-        "name": "Illegal Burger - Capitol Hill", "image_url": "https://s3-media3.fl.yelpcdn.com/bphoto/7DodwAN4XwdutLR6W8CIeQ/o.jpg",
-        "is_closed": false, "url": "https://www.yelp.com/biz/illegal-burger-capitol-hill-denver?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=OBMoK3r2ftITcAO2w2E5Ew",
-        "review_count": 138, "categories": [{"alias": "burgers", "title": "Burgers"},
-        {"alias": "beerbar", "title": "Beer Bar"}], "rating": 4.0, "coordinates":
-        {"latitude": 39.72607, "longitude": -104.98403}, "transactions": ["delivery",
-        "pickup"], "price": "$$", "location": {"address1": "609 Grant St", "address2":
-        "", "address3": null, "city": "Denver", "zip_code": "80203", "country": "US",
-        "state": "CO", "display_address": ["609 Grant St", "Denver, CO 80203"]}, "phone":
-        "+13038311300", "display_phone": "(303) 831-1300", "distance": 1570.6967197835638}],
-        "total": 240, "region": {"center": {"longitude": -104.97024536132812, "latitude":
-        39.73552421220229}}}'
-  recorded_at: Tue, 09 Nov 2021 23:40:33 GMT
+        830-3934", "distance": 1495.906962978679}], "total": 240, "region": {"center":
+        {"longitude": -104.97024536132812, "latitude": 39.73552421220229}}}'
+  recorded_at: Wed, 10 Nov 2021 00:18:41 GMT
 recorded_with: VCR 6.0.0
