--- a/spec/vcr/yelp_facade/finds_business_by_id.yml
+++ b/spec/vcr/yelp_facade/finds_business_by_id.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      X-B3-Sampled:
-      - '0'
-      Server:
-      - envoy
       Ratelimit-Dailylimit:
       - '5000'
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-6d497; site=public_api_v3
-      Ratelimit-Remaining:
-      - '4966'
-      X-Zipkin-Id:
-      - d168057a13e0dc4d
       Ratelimit-Resettime:
-      - '2021-11-10T00:00:00+00:00'
+      - '2021-11-11T00:00:00+00:00'
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-2vmgd; site=public_api_v3
+      X-B3-Sampled:
+      - '0'
+      Ratelimit-Remaining:
+      - '4997'
+      Server:
+      - envoy
+      X-Zipkin-Id:
+      - beb32a3a59340bb0
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-164-1-useast1bprod
+      - 10-65-91-109-useast1aprod
       X-Extlb:
-      - 10-65-164-1-useast1bprod
+      - 10-65-91-109-useast1aprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Tue, 09 Nov 2021 23:40:33 GMT
+      - Wed, 10 Nov 2021 00:18:41 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-dal21261-DAL
+      - cache-dal21236-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -84,7 +84,7 @@ http_interactions:
         "1530", "end": "2000", "day": 4}, {"is_overnight": false, "start": "1200",
         "end": "2000", "day": 5}, {"is_overnight": false, "start": "1200", "end":
         "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
-        ["delivery", "pickup"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
+        ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Tue, 09 Nov 2021 23:40:33 GMT
+  recorded_at: Wed, 10 Nov 2021 00:18:41 GMT
 recorded_with: VCR 6.0.0
